--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-basic-auth": "^1.2.1",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "pnpm": "^8.15.6",
+    "start": "^5.1.0"
   },
   "devDependencies": {
-    "prettier": "3.2.5",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "prettier": "3.2.5"
   }
 }
